--- a/package.json
+++ b/package.json
@@ -25,6 +25,7 @@
     "request": "~2.36.0",
     "time-grunt": "~0.3.2",
     "load-grunt-tasks": "~0.6.0",
-    "coffee-script": "^1.7.1"
+    "coffee-script": "^1.7.1",
+    "grunt-contrib-coffee": "^0.12.0"
   }
 }
