--- a/package.json
+++ b/package.json
@@ -26,6 +26,7 @@
     "time-grunt": "~0.3.2",
     "load-grunt-tasks": "~0.6.0",
     "coffee-script": "^1.7.1",
-    "grunt-contrib-coffee": "^0.12.0"
+    "grunt-contrib-coffee": "^0.12.0",
+    "grunt-contrib-clean": "^0.6.0"
   }
 }
