--- a/package.json
+++ b/package.json
@@ -15,7 +15,8 @@
     "method-override": "~2.1.1",
     "glob": "~4.0.5",
     "mongoose": "~3.8.12",
-    "ejs": "~1.0.0"
+    "ejs": "~1.0.0",
+    "less-middleware": "~1.0.4"
   },
   "devDependencies": {
     "grunt": "~0.4.5",
