--- a/bower.json
+++ b/bower.json
@@ -7,6 +7,7 @@
     "components"
   ],
   "dependencies": {
-    "requirejs": "~2.1.15"
+    "requirejs": "~2.1.15",
+    "angular": "~1.3.0"
   }
 }
