--- a/bower.json
+++ b/bower.json
@@ -8,6 +8,9 @@
   ],
   "dependencies": {
     "requirejs": "~2.1.15",
-    "angular": "~1.3.0"
+    "angular": "~1.3.0",
+    "polymer": "~0.4.2",
+    "core-elements": "Polymer/core-elements",
+    "paper-elements": "Polymer/paper-elements"
   }
 }
