--- a/package.json
+++ b/package.json
@@ -16,7 +16,8 @@
     "glob": "~4.0.5",
     "mongoose": "~3.8.12",
     "ejs": "~1.0.0",
-    "less-middleware": "~1.0.4"
+    "less-middleware": "~1.0.4",
+    "passport": "^0.2.1"
   },
   "devDependencies": {
     "grunt": "~0.4.5",
