--- a/package.json
+++ b/package.json
@@ -17,7 +17,8 @@
     "mongoose": "~3.8.12",
     "ejs": "~1.0.0",
     "less-middleware": "~1.0.4",
-    "passport": "^0.2.1"
+    "passport": "^0.2.1",
+    "passport-local": "^1.0.0"
   },
   "devDependencies": {
     "grunt": "~0.4.5",
