--- a/package.json
+++ b/package.json
@@ -18,7 +18,8 @@
     "ejs": "~1.0.0",
     "less-middleware": "~1.0.4",
     "passport": "^0.2.1",
-    "passport-local": "^1.0.0"
+    "passport-local": "^1.0.0",
+    "express-session": "^1.9.1"
   },
   "devDependencies": {
     "grunt": "~0.4.5",
