--- a/bower.json
+++ b/bower.json
@@ -11,6 +11,7 @@
     "angular": "~1.3.0",
     "polymer": "~0.4.2",
     "core-elements": "Polymer/core-elements",
-    "paper-elements": "Polymer/paper-elements"
+    "paper-elements": "Polymer/paper-elements",
+    "polymer-grid-layout": "Polymer/polymer-grid-layout"
   }
 }
