--- a/bower.json
+++ b/bower.json
@@ -10,8 +10,9 @@
     "requirejs": "~2.1.15",
     "angular": "~1.3.0",
     "polymer": "~0.4.2",
-    "core-elements": "Polymer/core-elements",
-    "paper-elements": "Polymer/paper-elements",
-    "polymer-grid-layout": "Polymer/polymer-grid-layout"
+    "core-elements": "Polymer/core-elements#0.4.2",
+    "paper-elements": "Polymer/paper-elements#0.4.2",
+    "polymer-grid-layout": "Polymer/polymer-grid-layout",
+    "ng-polymer-elements": "latest"
   }
 }
