--- a/bower.json
+++ b/bower.json
@@ -11,8 +11,6 @@
     "angular": "~1.3.4",
     "polymer": "~0.5.1",
     "core-elements": "Polymer/core-elements#0.5.1",
-    "paper-elements": "Polymer/paper-elements#0.5.1",
-    "polymer-grid-layout": "Polymer/polymer-grid-layout",
-    "ng-polymer-elements": "latest"
+    "paper-elements": "Polymer/paper-elements#0.5.1"
   }
 }
