--- a/bower.json
+++ b/bower.json
@@ -10,7 +10,8 @@
     "requirejs": "~2.1.15",
     "angular": "~1.3.4",
     "polymer": "~0.5.1",
-    "core-elements": "Polymer/core-elements#0.5.1",
-    "paper-elements": "Polymer/paper-elements#0.5.1"
+    "require-css": "~0.1.8",
+    "core-elements": "Polymer/core-elements#~0.5.2",
+    "paper-elements": "Polymer/paper-elements#~0.5.2"
   }
 }
