--- a/package.json
+++ b/package.json
@@ -19,7 +19,8 @@
     "less-middleware": "~1.0.4",
     "passport": "^0.2.1",
     "passport-local": "^1.0.0",
-    "express-session": "^1.9.1"
+    "express-session": "^1.9.1",
+    "password-hash": "^1.2.2"
   },
   "devDependencies": {
     "grunt": "~0.4.5",
