--- a/bower.json
+++ b/bower.json
@@ -12,6 +12,7 @@
     "polymer": "~0.5.2",
     "require-css": "~0.1.8",
     "core-elements": "Polymer/core-elements#~0.5.2",
-    "paper-elements": "Polymer/paper-elements#~0.5.2"
+    "paper-elements": "Polymer/paper-elements#~0.5.2",
+    "marked": "~0.3.3"
   }
 }
