--- a/package.json
+++ b/package.json
@@ -6,21 +6,22 @@
     "start": "node app.js"
   },
   "dependencies": {
-    "express": "~4.2.0",
-    "serve-favicon": "~2.0.1",
-    "morgan": "~1.1.1",
-    "cookie-parser": "~1.3.2",
     "body-parser": "~1.4.3",
     "compression": "~1.0.8",
-    "method-override": "~2.1.1",
-    "glob": "~4.0.5",
-    "mongoose": "~3.8.12",
+    "cookie-parser": "~1.3.2",
     "ejs": "~1.0.0",
+    "express": "~4.2.0",
+    "express-session": "^1.9.1",
+    "glob": "~4.0.5",
     "less-middleware": "~1.0.4",
+    "method-override": "~2.1.1",
+    "moment": "^2.10.2",
+    "mongoose": "~3.8.12",
+    "morgan": "~1.1.1",
     "passport": "^0.2.1",
     "passport-local": "^1.0.0",
-    "express-session": "^1.9.1",
-    "password-hash": "^1.2.2"
+    "password-hash": "^1.2.2",
+    "serve-favicon": "~2.0.1"
   },
   "devDependencies": {
     "grunt": "~0.4.5",
