--- a/bower.json
+++ b/bower.json
@@ -13,6 +13,7 @@
     "require-css": "~0.1.8",
     "core-elements": "Polymer/core-elements#~0.5.2",
     "paper-elements": "Polymer/paper-elements#~0.5.2",
-    "marked": "~0.3.3"
+    "marked": "~0.3.3",
+    "moment": "~2.10.2"
   }
 }
