--- a/package.json
+++ b/package.json
@@ -14,6 +14,7 @@
     "express-session": "^1.9.1",
     "glob": "~4.0.5",
     "less-middleware": "~1.0.4",
+    "marked": "^0.3.3",
     "method-override": "~2.1.1",
     "moment": "^2.10.2",
     "mongoose": "~3.8.12",
@@ -21,7 +22,8 @@
     "passport": "^0.2.1",
     "passport-local": "^1.0.0",
     "password-hash": "^1.2.2",
-    "serve-favicon": "~2.0.1"
+    "serve-favicon": "~2.0.1",
+    "underscore": "^1.8.3"
   },
   "devDependencies": {
     "grunt": "~0.4.5",
