사진 placeholder 추가. setting 페이지 기본 스크립트 추가

--- a/bower.json
+++ b/bower.json
@@ -15,6 +15,8 @@
     "paper-elements": "Polymer/paper-elements#~0.5.2",
     "marked": "~0.3.3",
     "moment": "~2.10.2",
-    "highlightjs": "~8.5.0"
+    "highlightjs": "~8.5.0",
+    "holderjs": "~2.7.1",
+    "angular-holderjs": "~1.1.0"
   }
 }
