--- a/bower.json
+++ b/bower.json
@@ -16,7 +16,6 @@
     "marked": "~0.3.3",
     "moment": "~2.10.2",
     "highlightjs": "~8.5.0",
-    "holderjs": "~2.7.1",
-    "angular-holderjs": "~1.1.0"
+    "holderjs": "~2.7.1"
   }
 }
