--- a/package.json
+++ b/package.json
@@ -9,7 +9,7 @@
     "body-parser": "~1.4.3",
     "compression": "~1.0.8",
     "cookie-parser": "~1.3.2",
-    "ejs": "~1.0.0",
+    "ejs": "^2.0.8",
     "express": "~4.2.0",
     "express-session": "^1.9.1",
     "glob": "~4.0.5",
