--- a/bower.json
+++ b/bower.json
@@ -16,6 +16,7 @@
     "marked": "~0.3.3",
     "moment": "~2.10.2",
     "highlightjs": "~8.5.0",
-    "holderjs": "~2.7.1"
+    "holderjs": "~2.7.1",
+    "angular-social-links": "~0.0.19"
   }
 }
