--- a/package.json
+++ b/package.json
@@ -31,6 +31,8 @@
     "grunt-contrib-clean": "^0.6.0",
     "grunt-contrib-coffee": "^0.12.0",
     "grunt-contrib-compass": "~0.9.0",
+    "grunt-contrib-copy": "^0.8.1",
+    "grunt-contrib-less": "^1.0.1",
     "grunt-contrib-requirejs": "^0.4.4",
     "grunt-contrib-watch": "~0.6.1",
     "grunt-develop": "~0.4.0",
