--- a/package.json
+++ b/package.json
@@ -5,6 +5,7 @@
   "scripts": {
     "start": "node app.js"
   },
+  "main": "app.js",
   "dependencies": {
     "body-parser": "~1.4.3",
     "compression": "~1.0.8",
@@ -26,8 +27,10 @@
     "underscore": "^1.8.3"
   },
   "devDependencies": {
+    "bower": "^1.6.5",
     "coffee-script": "^1.7.1",
     "grunt": "~0.4.5",
+    "grunt-cli": "^0.1.13",
     "grunt-contrib-clean": "^0.6.0",
     "grunt-contrib-coffee": "^0.12.0",
     "grunt-contrib-compass": "~0.9.0",
